implements proper alpha param in model setup

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1225,22 +1225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "class StackingWithFTests(ProblemTransformationBase):\n",
+    "    alpha: float\n",
+    "    use_first_layer_to_calculate_correlations: bool\n",
+    "\n",
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: List[Any] # TODO should be any generic type of classifier\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
+    "        alpha: float = 0.5,\n",
     "        use_first_layer_to_calculate_correlations: bool = False,\n",
     "        classifier: Any = None,\n",
     "        require_dense: Optional[List[bool]] = None\n",
     "    ):\n",
     "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
     "\n",
+    "        if alpha < 0.0 or alpha > 1.0:\n",
+    "            raise Exception(\"alpha must be >= 0.0 and <= 1.0\")\n",
+    "\n",
+    "        self.alpha = alpha\n",
     "        self.use_first_layer_to_calculate_correlations = use_first_layer_to_calculate_correlations\n",
     "        \n",
     "        self.first_layer_classifiers = BinaryRelevance(\n",
@@ -1256,18 +1264,13 @@
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
-    "\n",
-    "        # predictions = self.first_layer_classifiers.predict(X)\n",
-    "        # # TODO: does it really make sense to take predictions over the same set of data used for training?\n",
     "        \n",
-    "        alpha = 0.6\n",
-    "\n",
     "        label_classifications = y\n",
     "        if self.use_first_layer_to_calculate_correlations:\n",
     "            label_classifications = self.first_layer_classifiers.predict(X)\n",
     "\n",
     "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(label_classifications)\n",
-    "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs, alpha)\n",
+    "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs)\n",
     "\n",
     "        labels_count = label_classifications.shape[1]\n",
     "\n",
@@ -1321,9 +1324,7 @@
     "    def convert_matrix_to_vector(self, matrix: Any):\n",
     "        return np.asarray(matrix).reshape(-1)\n",
     "    \n",
-    "    def get_map_of_correlated_labels(self, f_test_results: List[Dict[str, Any]], alpha: float) -> pd.DataFrame:\n",
-    "        # TODO must ensure alpha > 0.0 && <= 1.0\n",
-    "\n",
+    "    def get_map_of_correlated_labels(self, f_test_results: List[Dict[str, Any]]) -> pd.DataFrame:\n",
     "        temp_df = pd.DataFrame(f_test_results)\n",
     "        \n",
     "        sorted_temp_df = temp_df.sort_values(\n",
@@ -1335,11 +1336,12 @@
     "        selected_features = []\n",
     "\n",
     "        for i in range(0, 6):\n",
+    "            # TODO: label count is hard coded here, this is WRONG\n",
     "            mask = sorted_temp_df[\"label_being_tested\"] == i\n",
     "            split_df = sorted_temp_df[mask].reset_index(drop=True)\n",
     "\n",
     "            big_f = split_df[\"f_test_result\"].sum()\n",
-    "            max_cum_f = alpha * big_f\n",
+    "            max_cum_f = self.alpha * big_f\n",
     "\n",
     "            cum_f = 0\n",
     "            for _, row in split_df.iterrows():\n",
@@ -1353,10 +1355,11 @@
     "                    \"f_test_result\": float(row[\"f_test_result\"]),\n",
     "                })\n",
     "        \n",
-    "        return pd.DataFrame(selected_features)\n",
+    "        cols = [\"for_label\", \"expand_this_label\", \"f_test_result\"]\n",
+    "        return pd.DataFrame(selected_features, columns=cols)\n",
     "    \n",
     "    def predict(self, X: Any) -> np.ndarray[Any,Any]:\n",
-    "        if self.correlated_labels_map.empty:\n",
+    "        if self.correlated_labels_map.columns.size == 0:\n",
     "            raise Exception(\"model was not trained yet\")\n",
     "\n",
     "        predictions = self.first_layer_classifiers.predict(X)\n",
@@ -1383,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1414,14 +1417,14 @@
       "text/plain": [
        "array([[0, 0, 0, 0, 0, 0],\n",
        "       [1, 0, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
        "       ...,\n",
        "       [0, 0, 0, 0, 0, 1],\n",
        "       [0, 0, 0, 0, 0, 1],\n",
        "       [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1470,11 +1473,11 @@
       "stacking hamming_loss 0.08416945373467112\n",
       "stacking accuracy 0.5869565217391305\n",
       "===\n",
-      "first_model (1) hamming_loss:  0.0838907469342252\n",
-      "first_model (1) accuracy:  0.6304347826086957\n",
+      "first_model (1) hamming_loss:  0.08235785953177258\n",
+      "first_model (1) accuracy:  0.6279264214046822\n",
       "===\n",
-      "first_model (2) hamming_loss:  0.08319397993311037\n",
-      "first_model (2) accuracy:  0.5994983277591973\n",
+      "first_model (2) hamming_loss:  0.08361204013377926\n",
+      "first_model (2) accuracy:  0.5961538461538461\n",
       "===\n"
      ]
     }
@@ -1501,6 +1504,42 @@
     "\n",
     "print(\"first_model (2) hamming_loss: \", first_model_2_hamming_loss)\n",
     "print(\"first_model (2) accuracy: \", first_model_2_accuracy_score)\n",
+    "print(\"===\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "first_model (alpha=0) hamming_loss:  0.08416945373467112\n",
+      "first_model (alpha=0) accuracy:  0.5869565217391305\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using alpha=0 should be the same as a regular stacking\n",
+    "\n",
+    "first_model_alpha_0 = StackingWithFTests(alpha=0)\n",
+    "first_model_alpha_0.fit(X_train, y_train)\n",
+    "first_model_alpha_0_preds = first_model_alpha_0.predict(X_test)\n",
+    "\n",
+    "first_model_alpha_0_hamming_loss = metrics.hamming_loss(y_test, first_model_alpha_0_preds)\n",
+    "first_model_alpha_0_accuracy_score = metrics.accuracy_score(y_test, first_model_alpha_0_preds)\n",
+    "\n",
+    "print(\"first_model (alpha=0) hamming_loss: \", first_model_alpha_0_hamming_loss)\n",
+    "print(\"first_model (alpha=0) accuracy: \", first_model_alpha_0_accuracy_score)\n",
     "print(\"===\")\n"
    ]
   },
