fixes not taking real labels count

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1225,16 +1225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "class StackingWithFTests(ProblemTransformationBase):\n",
     "    alpha: float\n",
     "    use_first_layer_to_calculate_correlations: bool\n",
-    "\n",
+    "    \n",
     "    first_layer_classifiers: BinaryRelevance\n",
     "    second_layer_classifiers: List[Any] # TODO should be any generic type of classifier\n",
+    "    labels_count: int\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -1260,9 +1261,12 @@
     "\n",
     "        self.second_layer_classifiers = []\n",
     "        self.correlated_labels_map = pd.DataFrame()\n",
+    "        self.labels_count = 0\n",
     "\n",
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
+    "        self.labels_count = y.shape[1]\n",
+    "\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
     "        \n",
     "        label_classifications = y\n",
@@ -1272,9 +1276,7 @@
     "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(label_classifications)\n",
     "        self.correlated_labels_map = self.get_map_of_correlated_labels(f_tested_label_pairs)\n",
     "\n",
-    "        labels_count = label_classifications.shape[1]\n",
-    "\n",
-    "        for i in range(labels_count):\n",
+    "        for i in range(self.labels_count):\n",
     "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
     "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
     "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
@@ -1293,27 +1295,26 @@
     "            self.second_layer_classifiers.append(meta_classifier)\n",
     "            print(f\"finished training meta classifier for label {i}\")\n",
     "    \n",
-    "    def calculate_f_test_for_all_label_pairs(self, predictions: Any) -> List[Dict[str, Any]]:\n",
-    "        labels_count = predictions.shape[1]\n",
+    "    def calculate_f_test_for_all_label_pairs(self, label_classifications: Any) -> List[Dict[str, Any]]:\n",
     "        results = []\n",
     "\n",
-    "        for i in range(0, labels_count):\n",
-    "            for j in range(0, labels_count):\n",
+    "        for i in range(0, self.labels_count):\n",
+    "            for j in range(0, self.labels_count):\n",
     "                if i == j:\n",
     "                    continue\n",
     "\n",
-    "                X = predictions.todense()[:, i]\n",
+    "                X = label_classifications.todense()[:, i]\n",
     "                base_label = self.convert_matrix_to_array(X)\n",
     "\n",
-    "                y = predictions.todense()[:, j]\n",
+    "                y = label_classifications.todense()[:, j]\n",
     "                against_label = self.convert_matrix_to_vector(y)\n",
     "\n",
-    "                f_test_result = float(f_classif(base_label, against_label)[0])\n",
+    "                f_test_result = f_classif(base_label, against_label)[0]\n",
     "\n",
     "                results.append({\n",
     "                    \"label_being_tested\": i,\n",
     "                    \"against_label\": j,\n",
-    "                    \"f_test_result\": f_test_result\n",
+    "                    \"f_test_result\": float(f_test_result)\n",
     "                })\n",
     "        \n",
     "        return results\n",
@@ -1335,8 +1336,7 @@
     "\n",
     "        selected_features = []\n",
     "\n",
-    "        for i in range(0, 6):\n",
-    "            # TODO: label count is hard coded here, this is WRONG\n",
+    "        for i in range(0, self.labels_count):\n",
     "            mask = sorted_temp_df[\"label_being_tested\"] == i\n",
     "            split_df = sorted_temp_df[mask].reset_index(drop=True)\n",
     "\n",
@@ -1363,11 +1363,11 @@
     "            raise Exception(\"model was not trained yet\")\n",
     "\n",
     "        predictions = self.first_layer_classifiers.predict(X)\n",
-    "        labels_count = predictions.shape[1]\n",
+    "        local_labels_count = predictions.shape[1]\n",
     "\n",
     "        second_layer_predictions = []\n",
     "\n",
-    "        for i in range(labels_count):\n",
+    "        for i in range(local_labels_count):\n",
     "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
     "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
     "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
        "       [1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1509,25 +1509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished training meta classifier for label 0\n",
-      "finished training meta classifier for label 1\n",
-      "finished training meta classifier for label 2\n",
-      "finished training meta classifier for label 3\n",
-      "finished training meta classifier for label 4\n",
-      "finished training meta classifier for label 5\n",
-      "first_model (alpha=0) hamming_loss:  0.08416945373467112\n",
-      "first_model (alpha=0) accuracy:  0.5869565217391305\n",
-      "===\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using alpha=0 should be the same as a regular binary relevance\n",
     "\n",
@@ -1545,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
