fixes model not taking labels count universally

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1511,7 +1511,23 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n",
+      "first_model (alpha=0) hamming_loss:  0.08416945373467112\n",
+      "first_model (alpha=0) accuracy:  0.5869565217391305\n",
+      "===\n"
+     ]
+    }
+   ],
    "source": [
     "# using alpha=0 should be the same as a regular binary relevance\n",
     "\n",
@@ -1529,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
