--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -885,9 +885,7 @@
     "        X_train, y_train, _, _ = train_data\n",
     "        X_test, y_test, _, _ = test_data\n",
     "        \n",
-    "        return X_train, y_train, X_test, y_test\n",
-    "\n",
-    "# using `scene` as this dataset seems to be a little bit more comprehensible than the others I tested\n"
+    "        return X_train, y_train, X_test, y_test\n"
    ]
   },
   {
