starts to get baseline method

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -40,6 +40,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2.2. Baseline model\n",
+    "\n",
+    "The baseline model will be the default **Classifier Chain** available in [the scikit-multilearn package](http://scikit.ml/api/skmultilearn.problem_transform.cc.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skmultilearn.problem_transform import ClassifierChain\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "train_data = load_dataset(\"scene\", \"train\")\n",
+    "test_data = load_dataset(\"scene\", \"test\")\n",
+    "# let's use the same \"scene\" dataset, that was used in the previous notebook (`1_first_model_experiments.ipynb`)\n",
+    "\n",
+    "X_train, y_train, _, _ = train_data\n",
+    "X_test, y_test, _, _ = test_data\n",
+    "\n",
+    "classifier = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "classifier.fit(X_train, y_train)\n",
+    "predictions = classifier.predict(X_test)\n",
+    "\n",
+    "baseline_cc_accuracy = metrics.accuracy_score(y_test, predictions)\n",
+    "baseline_cc_hamming_loss = metrics.hamming_loss(y_test, predictions)\n",
+    "\n",
+    "print(\"Accuracy score: \", baseline_cc_accuracy)\n",
+    "print(\"Hamming loss: \", baseline_cc_hamming_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2.2. Implementation"
    ]
   },
@@ -49,6 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO\n",
+    "\n",
     "class StackingWithFTests(ProblemTransformationBase):\n",
     "    alpha: float\n",
     "    use_first_layer_to_calculate_correlations: bool\n",
