initial base for new classifier

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skmultilearn.problem_transform import BinaryRelevance\n",
+    "from skmultilearn.problem_transform import ClassifierChain\n",
     "from skmultilearn.dataset import load_dataset, available_data_sets\n",
     "from sklearn.svm import SVC\n",
     "from skmultilearn.base.problem_transformation import ProblemTransformationBase\n",
@@ -47,13 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n",
+      "Accuracy score:  0.6780936454849499\n",
+      "Hamming loss:  0.09085841694537347\n"
+     ]
+    }
+   ],
    "source": [
-    "from skmultilearn.problem_transform import ClassifierChain\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
     "train_data = load_dataset(\"scene\", \"train\")\n",
     "test_data = load_dataset(\"scene\", \"test\")\n",
     "# let's use the same \"scene\" dataset, that was used in the previous notebook (`1_first_model_experiments.ipynb`)\n",
@@ -80,58 +89,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Taking this baseline classifier chain implementation, and also the same dataset, let's check if using the **F-test** to order the classifiers will result in better scores.\n",
+    "\n",
+    "Something that should be mentioned is that this is _already better_ than the **Stacking With F-test**.\n",
+    "\n",
+    "The documentation for this `ClassifierChain` class states that \"for L labels it trains L classifiers ordered in a chain according to the **Bayesian chain rule**\". However, the source code shows nothing about this... The ordering is a very simple sequential list of how the labels are already organized in the training data. Here is the code:\n",
+    "\n",
+    "```python\n",
+    "# class ClassifierChain(ProblemTransformationBase):\n",
+    "# ...\n",
+    "    def _order(self):\n",
+    "        if self.order is not None:\n",
+    "            return self.order\n",
+    "\n",
+    "        try:\n",
+    "            return list(range(self._label_count))\n",
+    "        except AttributeError:\n",
+    "            raise NotFittedError(\"This Classifier Chain has not been fit yet\")\n",
+    "```\n",
+    "\n",
+    "So, the ordering is just the order of the labels in the dataset. This is weird. Anyway, the good thing is that we can use this `ClassifierChain` as the base class for our implementation, and simply pass a custom ordering to it.\n",
+    "\n",
+    "Something else to consider, however, is that it will simply iterate over the classifiers following the order we pass to it. I was thinking of something akin to a graph, where the path taken in the chain would be dependant on the output of the previous classifier (instead of simply accumulating the predictions of all classifiers). For instance:\n",
+    "\n",
+    "* The start of the chain is the label `l1`.\n",
+    "* For a given instance, it predicts `l1 = 1`. Then take a path towards `l2`, with which it has a high correlation according to the **F-test**.\n",
+    "* For another instance, it predicts `l1 = 0`. Then take a path towards `l3`, with which it has no correlation, according to the **F-test**.\n",
+    "\n",
+    "This would be more similar to what is done in the stacking method.\n",
+    "\n",
+    "It is something to consider, but for now, let's just use the default implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2.2. Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO\n",
     "\n",
-    "class StackingWithFTests(ProblemTransformationBase):\n",
-    "    alpha: float\n",
-    "    use_first_layer_to_calculate_correlations: bool\n",
-    "\n",
-    "    first_layer_classifiers: BinaryRelevance\n",
-    "    # TODO should be any generic type of classifier\n",
-    "    second_layer_classifiers: List[Any]\n",
-    "    labels_count: int\n",
-    "\n",
+    "class ClassifierChainWithFTests(ProblemTransformationBase):\n",
     "    def __init__(\n",
     "        self,\n",
     "        alpha: float = 0.5,\n",
     "        classifier: Any = None,\n",
     "        require_dense: Optional[List[bool]] = None\n",
     "    ):\n",
-    "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
+    "        super(ClassifierChainWithFTests, self).__init__(classifier, require_dense)\n",
     "\n",
     "        if alpha < 0.0 or alpha > 1.0:\n",
     "            raise Exception(\"alpha must be >= 0.0 and <= 1.0\")\n",
     "\n",
     "        self.alpha = alpha\n",
-    "\n",
-    "        self.first_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
-    "            require_dense=[False, True]\n",
-    "        )\n",
-    "        # TODO: allow for any base model (base classifier) to be used\n",
-    "        # right now I am forcing the use of SVC\n",
-    "\n",
-    "        self.second_layer_classifiers = []\n",
     "        self.correlated_labels_map = pd.DataFrame()\n",
     "        self.labels_count = 0\n",
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.labels_count = y.shape[1]\n",
-    "\n",
-    "        self.first_layer_classifiers.fit(X, y)\n",
-    "\n",
-    "        label_classifications = y\n",
-    "        if self.use_first_layer_to_calculate_correlations:\n",
-    "            label_classifications = self.first_layer_classifiers.predict(X)\n",
     "\n",
     "        f_tested_label_pairs = self.calculate_f_test_for_all_label_pairs(\n",
     "            label_classifications)\n",
@@ -139,25 +161,9 @@
     "        self.correlated_labels_map = self.get_map_of_correlated_labels(\n",
     "            f_tested_label_pairs)\n",
     "\n",
-    "        for i in range(self.labels_count):\n",
-    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
-    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
-    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "        # TODO: should extract ordering from it\n",
     "\n",
-    "            additional_input = label_classifications.todense()[\n",
-    "                :, labels_to_expand]\n",
-    "\n",
-    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
-    "            X_expanded = np.asarray(X_expanded)\n",
-    "\n",
-    "            y_label_specific = y.todense()[:, i]\n",
-    "            y_label_specific = self.convert_matrix_to_vector(y_label_specific)\n",
-    "\n",
-    "            meta_classifier = SVC()\n",
-    "            meta_classifier.fit(X_expanded, y_label_specific)\n",
-    "\n",
-    "            self.second_layer_classifiers.append(meta_classifier)\n",
-    "            print(f\"finished training meta classifier for label {i}\")\n",
+    "        return self.correlated_labels_map\n",
     "\n",
     "    def calculate_f_test_for_all_label_pairs(self, label_classifications: Any) -> List[Dict[str, Any]]:\n",
     "        results = []\n",
@@ -223,30 +229,16 @@
     "        return pd.DataFrame(selected_features, columns=cols)\n",
     "\n",
     "    def predict(self, X: Any) -> np.ndarray[Any, Any]:\n",
-    "        if self.correlated_labels_map.columns.size == 0:\n",
-    "            raise Exception(\"model was not trained yet\")\n",
-    "\n",
-    "        predictions = self.first_layer_classifiers.predict(X)\n",
-    "        local_labels_count = predictions.shape[1]\n",
-    "\n",
-    "        second_layer_predictions = []\n",
-    "\n",
-    "        for i in range(local_labels_count):\n",
-    "            mask = self.correlated_labels_map[\"for_label\"] == i\n",
-    "            split_df = self.correlated_labels_map[mask].reset_index(drop=True)\n",
-    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
-    "\n",
-    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
-    "\n",
-    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
-    "            X_expanded = np.asarray(X_expanded)\n",
-    "\n",
-    "            temp_preds = self.second_layer_classifiers[i].predict(X_expanded)\n",
-    "            second_layer_predictions.append(temp_preds)\n",
-    "\n",
-    "        reshaped_array = np.asarray(second_layer_predictions).T\n",
-    "        return reshaped_array\n"
+    "        # TODO: implement\n",
+    "        return np.zeros((X.shape[0], self.labels_count))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
