--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -125,14 +125,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3. Implementation\n",
+    "## 2.3. Ordering labels via F-test\n",
     "\n",
     "At first, let's study a bit the F-test calculation, taking what was built in the previous notebook. Then we can proceed with actually implementing the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,10 +222,7 @@
     "\n",
     "        cols = [\"for_label\", \"expand_this_label\", \"f_test_result\"]\n",
     "        return pd.DataFrame(selected_features, columns=cols)\n",
-    "\n",
-    "    def predict(self, X: Any) -> np.ndarray[Any, Any]:\n",
-    "        # TODO: implement\n",
-    "        return np.zeros((X.shape[0], self.labels_count))\n"
+    "\n"
    ]
   },
   {
@@ -491,9 +488,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.054443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11.054443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30.068018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.068018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.173567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.173567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>44.889245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44.889245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.657072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45.657072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.267693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52.267693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.368680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>56.368680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59.336173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>59.336173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>83.641509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>83.641509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    for_label  expand_this_label  f_test_result\n",
+       "19          3                  4      11.054443\n",
+       "24          4                  3      11.054443\n",
+       "18          3                  2      25.999023\n",
+       "14          2                  3      25.999023\n",
+       "4           0                  4      30.068018\n",
+       "23          4                  0      30.068018\n",
+       "29          5                  0      33.173567\n",
+       "3           0                  5      33.173567\n",
+       "17          3                  1      37.984223\n",
+       "9           1                  3      37.984223\n",
+       "8           1                  2      38.222988\n",
+       "13          2                  1      38.222988\n",
+       "7           1                  5      44.889245\n",
+       "28          5                  1      44.889245\n",
+       "6           1                  0      45.657072\n",
+       "2           0                  1      45.657072\n",
+       "16          3                  5      52.267693\n",
+       "27          5                  3      52.267693\n",
+       "12          2                  4      54.713588\n",
+       "22          4                  2      54.713588\n",
+       "26          5                  2      55.765976\n",
+       "11          2                  5      55.765976\n",
+       "15          3                  0      56.368680\n",
+       "1           0                  3      56.368680\n",
+       "0           0                  2      56.728266\n",
+       "10          2                  0      56.728266\n",
+       "21          4                  1      59.336173\n",
+       "5           1                  4      59.336173\n",
+       "25          5                  4      83.641509\n",
+       "20          4                  5      83.641509"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.sort_values(\"f_test_result\", ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The initial idea was to start with the \"most uncorrelated label at all\". That is: the label that shares the lowest correlation with all other labels.\n",
+    "\n",
+    "However, this does not make any sense, all all label correlations are calculated in pairs. So I can simply start with either label from the pair that presents the highest correlation. Then, from that, walk through the pairs always taking that next pair that shares the same label, has the highest correlation and was not yet used.\n",
+    "\n",
+    "Let's try to do the ordering manually, then we think about how to implement it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.728266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55.765976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54.713588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.222988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    for_label  expand_this_label  f_test_result\n",
+       "10          2                  0      56.728266\n",
+       "11          2                  5      55.765976\n",
+       "12          2                  4      54.713588\n",
+       "13          2                  1      38.222988\n",
+       "14          2                  3      25.999023"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.sort_values(\"f_test_result\", ascending=False)\n",
+    "\n",
+    "m = res[\"for_label\"] == 2\n",
+    "res[m]\n",
+    "\n",
+    "# 5 -> 4 -> 1 -> 0 -> 2 -> 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this dataset, it seems like the expected ordering would be `5 -> 4 -> 1 -> 0 -> 2 -> 3`.\n",
+    "\n",
+    "The initial pair, `5 -> 4`, could also be `4 -> 5`. What if we start with `4 -> 5`? Let's see how the ordering would end up being."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>for_label</th>\n",
+       "      <th>expand_this_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.368680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>52.267693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.984223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>25.999023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.054443</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    for_label  expand_this_label  f_test_result\n",
+       "15          3                  0      56.368680\n",
+       "16          3                  5      52.267693\n",
+       "17          3                  1      37.984223\n",
+       "18          3                  2      25.999023\n",
+       "19          3                  4      11.054443"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.sort_values(\"f_test_result\", ascending=False)\n",
+    "\n",
+    "m = res[\"for_label\"] == 3\n",
+    "res[m]\n",
+    "\n",
+    "# 4 -> 5 -> 2 -> 0 -> 3 -> 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, the order changes considerably. Let's test each of them on the model and see if it makes a difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
