adds first results

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -156,8 +156,6 @@
     "        self.correlated_labels_map = self.get_map_of_correlated_labels(\n",
     "            f_tested_label_pairs)\n",
     "\n",
-    "        # TODO: should extract ordering from it\n",
-    "\n",
     "        return self.correlated_labels_map\n",
     "\n",
     "    def calculate_f_test_for_all_label_pairs(self, label_classifications: Any) -> List[Dict[str, Any]]:\n",
@@ -948,6 +946,88 @@
    "metadata": {},
    "source": [
     "Ok, the order changes considerably. Let's test each of them on the model and see if it makes a difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score:  0.027591973244147156\n",
+      "Hamming loss:  0.3241360089186176\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_chain = [5, 4, 1, 0, 2, 3]\n",
+    "\n",
+    "first_chain_classifier = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True],\n",
+    "    order=first_chain,\n",
+    ")\n",
+    "\n",
+    "first_chain_classifier.fit(X_train, y_train)\n",
+    "first_chain_predictions = first_chain_classifier.predict(X_test)\n",
+    "\n",
+    "first_chain_accuracy = metrics.accuracy_score(y_test, first_chain_predictions)\n",
+    "first_chain_hamming_loss = metrics.hamming_loss(y_test, first_chain_predictions)\n",
+    "\n",
+    "print(\"Accuracy score: \", first_chain_accuracy)\n",
+    "print(\"Hamming loss: \", first_chain_hamming_loss)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Terrible results..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score:  0.15802675585284282\n",
+      "Hamming loss:  0.2653288740245262\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_chain = [4, 5, 2, 0, 3, 1]\n",
+    "\n",
+    "second_chain_classifier = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True],\n",
+    "    order=second_chain,\n",
+    ")\n",
+    "\n",
+    "second_chain_classifier.fit(X_train, y_train)\n",
+    "second_chain_predictions = second_chain_classifier.predict(X_test)\n",
+    "\n",
+    "second_chain_accuracy = metrics.accuracy_score(y_test, second_chain_predictions)\n",
+    "second_chain_hamming_loss = metrics.hamming_loss(\n",
+    "    y_test, second_chain_predictions)\n",
+    "\n",
+    "print(\"Accuracy score: \", second_chain_accuracy)\n",
+    "print(\"Hamming loss: \", second_chain_hamming_loss)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slightly better but still way worse than the default ordering.\n",
+    "Let's try to dive deeper into that."
    ]
   },
   {
