creates new section

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -1026,8 +1026,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slightly better but still way worse than the default ordering.\n",
-    "Let's try to dive deeper into that."
+    "Slightly better but still way worse than the default ordering. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4. Understanding the initial results\n",
+    "\n",
+    "Let's try to dive deeper into these results, by first attempting to reproduce the initial results by passing the most simply ordering possible, that in the theory the `ClassifierChain` already uses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the simple order: [0, 1, 2, 3, 4, 5]\n",
+      "Accuracy score:  0.6780936454849499\n",
+      "Hamming loss:  0.09085841694537347\n"
+     ]
+    }
+   ],
+   "source": [
+    "label_count = y_train.shape[1]\n",
+    "simple_order = list(range(label_count))\n",
+    "\n",
+    "print(f\"this is the simple order: {simple_order}\")\n",
+    "\n",
+    "simple_order_classifier = ClassifierChain(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True],\n",
+    "    order=simple_order,\n",
+    ")\n",
+    "\n",
+    "simple_order_classifier.fit(X_train, y_train)\n",
+    "simple_order_predictions = simple_order_classifier.predict(X_test)\n",
+    "\n",
+    "simple_order_accuracy = metrics.accuracy_score(\n",
+    "    y_test, simple_order_predictions)\n",
+    "simple_order_hamming_loss = metrics.hamming_loss(\n",
+    "    y_test, simple_order_predictions)\n",
+    "\n",
+    "print(\"Accuracy score: \", simple_order_accuracy)\n",
+    "print(\"Hamming loss: \", simple_order_hamming_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Really interesting results. What else can we try here? Maybe reversing the order? Maybe also reversing the order considering the F-test?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_ordering(order: List[int]):\n",
+    "    print(f\"testing order: {order}\")\n",
+    "\n",
+    "    classifier = ClassifierChain(\n",
+    "        classifier=SVC(),\n",
+    "        require_dense=[False, True],\n",
+    "        order=order,\n",
+    "    )\n",
+    "\n",
+    "    classifier.fit(X_train, y_train)\n",
+    "    preds = classifier.predict(X_test)\n",
+    "\n",
+    "    acc = metrics.accuracy_score(\n",
+    "        y_test, preds)\n",
+    "    hamming_loss = metrics.hamming_loss(\n",
+    "        y_test, preds)\n",
+    "\n",
+    "    print(\"Accuracy score: \", acc)\n",
+    "    print(\"Hamming loss: \", hamming_loss)\n",
+    "    print(\"===\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing order: [0, 1, 2, 3, 4, 5]\n",
+      "Accuracy score:  0.6780936454849499\n",
+      "Hamming loss:  0.09085841694537347\n",
+      "===\n",
+      "testing order: [5, 4, 3, 2, 1, 0]\n",
+      "Accuracy score:  0.051839464882943144\n",
+      "Hamming loss:  0.3171683389074693\n",
+      "===\n",
+      "testing order: [5, 4, 1, 0, 2, 3]\n",
+      "Accuracy score:  0.027591973244147156\n",
+      "Hamming loss:  0.3241360089186176\n",
+      "===\n",
+      "testing order: [3, 2, 0, 1, 4, 5]\n",
+      "Accuracy score:  0.22240802675585283\n",
+      "Hamming loss:  0.26184503901895206\n",
+      "===\n",
+      "testing order: [4, 5, 2, 0, 3, 1]\n",
+      "Accuracy score:  0.15802675585284282\n",
+      "Hamming loss:  0.2653288740245262\n",
+      "===\n",
+      "testing order: [1, 3, 0, 2, 5, 4]\n",
+      "Accuracy score:  0.06438127090301003\n",
+      "Hamming loss:  0.31981605351170567\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# simple orders\n",
+    "test_ordering([0, 1, 2, 3, 4, 5]) # default\n",
+    "test_ordering([5, 4, 3, 2, 1, 0]) # reversed\n",
+    "\n",
+    "# f-test orders\n",
+    "test_ordering(first_chain) # default\n",
+    "test_ordering(list(reversed(first_chain)))  # reversed\n",
+    "\n",
+    "test_ordering(second_chain)  # default\n",
+    "test_ordering(list(reversed(second_chain)))  # reversed\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No good results at all. Let's try to brute force this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import permutations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(permutations([0, 1, 2, 3, 4, 5])))"
    ]
   },
   {
