adds one more comment

--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -1978,13 +1978,9 @@
     "So, I see a few necessary improvements to take:\n",
     "* Stablish a proper evaluation pipeline that uses cross validation. This should mitigate the problem of datasets being too sensitive to a particular split and ordering.\n",
     "* Implement a custom `ClassifierChain` base method that logs the model performance on each label. This should help us to understand if the performance is increasing or decreasing as the chain progresses.\n",
-    "* Fully implement the proposed ordering method. Even if the results are still bad, this study should count towards the final report. It is an effort that I am making, it is being documented, and it is a valid result, even if negative."
+    "* Fully implement the proposed ordering method. Even if the results are still bad, this study should count towards the final report. It is an effort that I am making, it is being documented, and it is a valid result, even if negative.\n",
+    "* Finally, just for the sake of testing, do an alternative ordering method that actually considers the lowest correlation when building the chain."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
