--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -1686,7 +1686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The initial results were based. But these are even worse. Let's check one more dataset."
+    "The initial results were bad. But these are even worse. Let's check one more dataset."
    ]
   },
   {
@@ -1976,11 +1976,16 @@
     "Given that this dataset has far more labels, I am starting to believe that the problem is the **number of labels**. For a dataset that has too few labels, the ordering is a quite sensitive thing, and the results might be explained by a simple matter of luck. It could be that that particular dataset, with that particular split between test and train, lead to that particular result with that order of labels.\n",
     "\n",
     "So, I see a few necessary improvements to take:\n",
-    "* Stablish a proper evaluation pipeline that uses cross validation. This should mitigate the problem of datasets being too sensitive to a particular split and ordering.\n",
+    "* Stablish a proper evaluation pipeline that uses cross validation. This should mitigate the problem of datasets being too sensitive to a particular split or ordering.\n",
     "* Implement a custom `ClassifierChain` base method that logs the model performance on each label. This should help us to understand if the performance is increasing or decreasing as the chain progresses.\n",
     "* Fully implement the proposed ordering method. Even if the results are still bad, this study should count towards the final report. It is an effort that I am making, it is being documented, and it is a valid result, even if negative.\n",
     "* Finally, just for the sake of testing, do an alternative ordering method that actually considers the lowest correlation when building the chain."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
