--- a/2_second_model_experiments.ipynb
+++ b/2_second_model_experiments.ipynb
@@ -1985,6 +1985,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 2.5. Attempting other ordering methods\n",
+    "\n",
+    "For a given pair of labels with high correlation, as measured by F-test, we expect the output of one label to be a good predictor of the other label.\n",
+    "\n",
+    "So if we start the chain with either of labels, we can expect the _second_ classifier in the chain to have the previous output as a good help. But the _first_ classifier (as we will use the pair to start the chain from `l1` to `l2` and then to whatever label is highly correlated to `l2`, and so on) will hve no help at all.\n",
+    "\n",
+    "This might explain the bad performance we have observed so far. We are taking the labels that could benefit more from previous label information, and putting them at the start of the chain, where they will have no help at all.\n",
+    "\n",
+    "Let's try to invert this order and see what happens."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
